working on piepline

--- a/etl/pipeline/notebooks/01_chunker_primitive.ipynb
+++ b/etl/pipeline/notebooks/01_chunker_primitive.ipynb
@@ -10,15 +10,15 @@
     "Split raw MDX documents into fixed-size text chunks.\n",
     "\n",
     "**Features:**\n",
-    "- Fixed 500-token chunks (no semantic awareness)\n",
-    "- Fast processing for rapid prototyping\n",
+    "- Fixed 500-token chunks\n",
+    "- Fast processing for prototyping\n",
     "- Output format ready for embedding and database storage\n",
     "- Baseline for comparison with semantic chunking\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "786b143e",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,9 @@
     "        \"\"\"Split document into fixed-size chunks.\"\"\"\n",
     "        chunks = []\n",
     "        component = doc.get('component', 'unknown')\n",
-    "        all_content = self._flatten_content(doc)\n",
+    "        \n",
+    "        all_content = doc.get('sections', [{}])[0].get('content', '')\n",
+    "        \n",
     "        chunk_size = self.max_chunk_tokens * 4\n",
     "        \n",
     "        for i in range(0, len(all_content), chunk_size):\n",
@@ -76,38 +78,17 @@
     "        \n",
     "        return chunks\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def _flatten_content(doc: dict) -> str:\n",
-    "        \"\"\"Flatten all text from document sections.\"\"\"\n",
-    "        parts = []\n",
-    "        \n",
-    "        for key, value in doc.get('metadata', {}).items():\n",
-    "            parts.append(f\"{key}: {value}\")\n",
-    "        \n",
-    "        def process_section(section):\n",
-    "            if section.get('title'):\n",
-    "                parts.append(section['title'])\n",
-    "            if section.get('content'):\n",
-    "                parts.append(section['content'])\n",
-    "            for child in section.get('children', []):\n",
-    "                process_section(child)\n",
-    "        \n",
-    "        for section in doc.get('sections', []):\n",
-    "            process_section(section)\n",
-    "        \n",
-    "        return '\\n\\n'.join(parts)\n",
-    "    \n",
     "    def chunk_documents(self, docs: List[dict]) -> List[Chunk]:\n",
     "        \"\"\"Process multiple documents.\"\"\"\n",
     "        all_chunks = []\n",
     "        for doc in docs:\n",
     "            all_chunks.extend(self.chunk_document(doc))\n",
-    "        return all_chunks\n"
+    "        return all_chunks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d744b50c",
    "metadata": {},
    "outputs": [
@@ -152,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "10e3046c",
    "metadata": {},
    "outputs": [
@@ -163,10 +144,10 @@
       "Created 186 chunks\n",
       "\n",
       "Token distribution:\n",
-      "  Min: 6\n",
+      "  Min: 4\n",
       "  Max: 500\n",
-      "  Avg: 404\n",
-      "  Total: 75,177 tokens\n",
+      "  Avg: 403\n",
+      "  Total: 74,998 tokens\n",
       "\n",
       "Filesize: 0.33 MB\n"
      ]
