--- a/etl/pipeline/notebooks/02_embedder.ipynb
+++ b/etl/pipeline/notebooks/02_embedder.ipynb
@@ -18,16 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "dbe9a6fe",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Ollama running\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -36,36 +39,31 @@
     "import requests\n",
     "import shutil\n",
     "\n",
-    "def ensure_ollama():\n",
+    "def ensure_ollama_is_running():\n",
+    "    # Check if server running\n",
     "    try:\n",
-    "        response = requests.get(\"http://localhost:11434/api/tags\", timeout=2)\n",
-    "        if response.status_code == 200:\n",
-    "            print(\"✓ Ollama running\")\n",
-    "            return\n",
+    "        requests.get(\"http://localhost:11434/api/tags\", timeout=2)\n",
     "    except:\n",
-    "        pass\n",
-    "    \n",
-    "    print(\"Starting Ollama...\")\n",
-    "    ollama_path = shutil.which(\"ollama\") or \"/usr/local/bin/ollama\"\n",
-    "    \n",
-    "    try:\n",
-    "        subprocess.Popen([ollama_path, \"serve\"], \n",
-    "                        stdout=subprocess.DEVNULL, \n",
-    "                        stderr=subprocess.DEVNULL)\n",
-    "        for _ in range(30):\n",
+    "        subprocess.Popen([shutil.which(\"ollama\") or \"/usr/local/bin/ollama\", \"serve\"], \n",
+    "                        stdout=subprocess.DEVNULL, stderr=subprocess.DEVNULL)\n",
+    "        for i in range(30):\n",
     "            try:\n",
-    "                response = requests.get(\"http://localhost:11434/api/tags\", timeout=1)\n",
-    "                if response.status_code == 200:\n",
-    "                    print(\"✓ Ollama started\")\n",
-    "                    return\n",
+    "                requests.get(\"http://localhost:11434/api/tags\", timeout=1)\n",
+    "                break\n",
     "            except:\n",
     "                time.sleep(1)\n",
-    "    except Exception as e:\n",
-    "        print(f\"✗ Failed: {e}\")\n",
+    "    \n",
+    "    #Step 2: Check if model loaded\n",
+    "    response = requests.get(\"http://localhost:11434/api/tags\", timeout=2)\n",
+    "    models = [m.get('name', '') for m in response.json().get('models', [])]\n",
+    "    if not any('nomic-embed-text' in name for name in models):\n",
+    "        print(\"Model not loaded. Run: ollama pull nomic-embed-text\")\n",
     "        return False\n",
-    "    return False\n",
+    "    \n",
+    "    # Model ready\n",
+    "    return True\n",
     "\n",
-    "ensure_ollama()\n"
+    "ensure_ollama_is_running()"
    ]
   },
   {
@@ -78,55 +76,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "d12f5321",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
-    "from abc import ABC, abstractmethod\n",
     "import requests\n",
-    "import subprocess\n",
+    "import time\n",
     "\n",
-    "class EmbeddingProvider(ABC):\n",
-    "    @abstractmethod\n",
-    "    def embed(self, texts: List[str]) -> List[List[float]]:\n",
-    "        pass\n",
-    "\n",
-    "class OllamaEmbedder(EmbeddingProvider):\n",
+    "class OllamaEmbedder:\n",
     "    def __init__(self, model: str = \"nomic-embed-text\", base_url: str = \"http://localhost:11434\"):\n",
     "        self.model = model\n",
     "        self.base_url = base_url\n",
-    "        self._ensure_model()\n",
     "    \n",
-    "    def _ensure_model(self):\n",
-    "        try:\n",
-    "            subprocess.run([\"/usr/local/bin/ollama\", \"pull\", self.model], \n",
-    "                          stdout=subprocess.DEVNULL, \n",
-    "                          stderr=subprocess.DEVNULL,\n",
-    "                          timeout=300)\n",
-    "        except:\n",
-    "            pass\n",
-    "    \n",
-    "    def embed(self, texts: List[str]) -> List[List[float]]:\n",
-    "        embeddings = []\n",
-    "        for text in texts:\n",
-    "            response = requests.post(\n",
-    "                f\"{self.base_url}/api/embed\",\n",
-    "                json={\"model\": self.model, \"input\": text}\n",
-    "            )\n",
-    "            data = response.json()\n",
-    "            if \"embeddings\" in data:\n",
-    "                embeddings.append(data[\"embeddings\"][0])\n",
-    "            elif \"embedding\" in data:\n",
-    "                embeddings.append(data[\"embedding\"])\n",
-    "            else:\n",
-    "                print(f\"Unexpected response: {data}\")\n",
-    "                raise KeyError(\"No embedding in response\")\n",
-    "        return embeddings\n",
+    "    def embed(self, texts: list[str]) -> list[list[float]]:\n",
+    "        print(f\"Starting embedding {len(texts)} texts with model {self.model}\")\n",
+    "        start = time.time()\n",
+    "        \n",
+    "        response = requests.post(\n",
+    "            f\"{self.base_url}/api/embed\",\n",
+    "            json={\"model\": self.model, \"input\": texts}\n",
+    "        )\n",
+    "        \n",
+    "        duration = time.time() - start\n",
+    "        print(f\"Completed in {duration:.2f}s ({duration/len(texts):.3f}s per chunk)\")\n",
+    "        \n",
+    "        data = response.json()\n",
+    "        return data[\"embeddings\"]\n",
     "\n",
     "def create_embedder(model: str = \"nomic-embed-text\") -> OllamaEmbedder:\n",
-    "    return OllamaEmbedder(model=model)\n"
+    "    return OllamaEmbedder(model=model)"
    ]
   },
   {
@@ -139,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "902ed502",
    "metadata": {},
    "outputs": [
@@ -175,7 +154,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embedding 186 chunks...\n"
+      "Embedding 186 chunks...\n",
+      "Avg chunk size: 1613 characters\n",
+      "Starting embedding 186 texts with model nomic-embed-text...\n",
+      "✓ Completed in 507.45s (2.728s per chunk)\n",
+      "Saved: chunks_primitive_embedded.json (2.97 MB)\n",
+      "Dimensions: 768\n"
      ]
     }
    ],
@@ -184,6 +168,7 @@
     "\n",
     "texts = [chunk['content'] for chunk in chunks]\n",
     "print(f\"Embedding {len(texts)} chunks...\")\n",
+    "print(f\"Avg chunk size: {sum(len(t) for t in texts) // len(texts)} characters\")\n",
     "\n",
     "embeddings = embedder.embed(texts)\n",
     "\n",
@@ -195,8 +180,7 @@
     "    json.dump(chunks, f, indent=2)\n",
     "\n",
     "file_size_mb = output_file.stat().st_size / (1024 * 1024)\n",
-    "print(f\"Saved: {output_file.name} ({file_size_mb:.2f} MB)\")\n",
-    "print(f\"Dimensions: {len(embeddings[0])}\")\n"
+    "print(f\"Saved: {output_file.name} ({file_size_mb:.2f} MB)\")\n"
    ]
   }
  ],
