imporving etl pipeline

--- a/etl/pipeline/notebooks/01_chunker_primitive.ipynb
+++ b/etl/pipeline/notebooks/01_chunker_primitive.ipynb
@@ -17,28 +17,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc485a44",
+   "metadata": {},
+   "source": [
+    "## Section 1: Chunk Data Structure and Chunker Class\n",
+    "\n",
+    "Defines the `Chunk` data structure and the `PrimitiveChunker` class for fixed-size token-based chunking. The chunker splits documents into uniform chunks with unique IDs and demo code references."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "786b143e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Section 1: Chunk Data Structure and Chunker Class\n",
-    "\n",
     "from dataclasses import dataclass\n",
-    "from typing import List, Optional\n",
+    "from typing import List, Optional, Dict\n",
     "\n",
     "\n",
     "@dataclass\n",
     "class Chunk:\n",
     "    \"\"\"Represents a text chunk with metadata.\"\"\"\n",
+    "    id: int\n",
     "    component: str\n",
-    "    section_title: Optional[str]\n",
-    "    section_path: Optional[str]\n",
+    "    section_path: str\n",
     "    content: str\n",
-    "    demo_files: List[str]\n",
-    "    images: List[str]\n",
-    "    token_count: int\n",
+    "    demo_code: Dict[str, str]\n",
+    "    parent_id: Optional[int]\n",
+    "    level: int\n",
     "\n",
     "\n",
     "class PrimitiveChunker:\n",
@@ -47,6 +55,7 @@
     "    def __init__(self, max_chunk_tokens: int = 500):\n",
     "        \"\"\"Initialize chunker with target token size.\"\"\"\n",
     "        self.max_chunk_tokens = max_chunk_tokens\n",
+    "        self.chunk_id_counter = 0\n",
     "    \n",
     "    @staticmethod\n",
     "    def estimate_tokens(text: str) -> int:\n",
@@ -60,21 +69,28 @@
     "        \n",
     "        all_content = doc.get('sections', [{}])[0].get('content', '')\n",
     "        \n",
+    "        # Build demo_map from top-level demos\n",
+    "        demo_map = {}\n",
+    "        if top_level_demos := doc.get('demos'):\n",
+    "            for demo in top_level_demos:\n",
+    "                if isinstance(demo, dict) and (demo_file := demo.get('file')) and (code := demo.get('code')):\n",
+    "                    demo_map[demo_file] = code\n",
+    "        \n",
     "        chunk_size = self.max_chunk_tokens * 4\n",
     "        \n",
     "        for i in range(0, len(all_content), chunk_size):\n",
     "            chunk_text = all_content[i:i + chunk_size]\n",
-    "            token_count = self.estimate_tokens(chunk_text)\n",
     "            \n",
     "            chunks.append(Chunk(\n",
+    "                id=self.chunk_id_counter,\n",
     "                component=component,\n",
-    "                section_title=None,\n",
-    "                section_path=None,\n",
+    "                section_path=component,\n",
     "                content=chunk_text,\n",
-    "                demo_files=doc.get('demos', []),\n",
-    "                images=[],\n",
-    "                token_count=token_count\n",
+    "                demo_code=demo_map,\n",
+    "                parent_id=None,\n",
+    "                level=0\n",
     "            ))\n",
+    "            self.chunk_id_counter += 1\n",
     "        \n",
     "        return chunks\n",
     "    \n",
@@ -84,6 +100,16 @@
     "        for doc in docs:\n",
     "            all_chunks.extend(self.chunk_document(doc))\n",
     "        return all_chunks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5e0e7a5",
+   "metadata": {},
+   "source": [
+    "## Section 2: Load Raw MDX Documents\n",
+    "\n",
+    "Loads all raw MDX documentation files from `data/raw/` and converts them into a standardized document format for chunking. Each document includes the component name, content, and any associated demo code."
    ]
   },
   {
@@ -132,8 +158,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f4c8a38",
+   "metadata": {},
+   "source": [
+    "## Section 3: Generate Chunks and Save to JSON\n",
+    "\n",
+    "Processes all documents using the `PrimitiveChunker` to split content into fixed-size chunks. Each chunk receives a unique ID, component reference, and associated demo code. Results are saved to `chunks_primitive.json` for embedding and database import."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "10e3046c",
    "metadata": {},
    "outputs": [
@@ -143,13 +179,9 @@
      "text": [
       "Created 186 chunks\n",
       "\n",
-      "Token distribution:\n",
-      "  Min: 4\n",
-      "  Max: 500\n",
-      "  Avg: 403\n",
-      "  Total: 74,998 tokens\n",
-      "\n",
-      "Filesize: 0.33 MB\n"
+      "Chunks saved to: /home/sinan/GitHub/reservix/ai-assistant/etl/data/chunks/chunks_primitive.json\n",
+      "File size: 0.33 MB\n",
+      "Total chunks: 186\n"
      ]
     }
    ],
@@ -159,23 +191,17 @@
     "all_chunks = chunker.chunk_documents(docs)\n",
     "\n",
     "print(f\"Created {len(all_chunks)} chunks\\n\")\n",
-    "print(\"Token distribution:\")\n",
-    "token_counts = [c.token_count for c in all_chunks]\n",
-    "print(f\"  Min: {min(token_counts)}\")\n",
-    "print(f\"  Max: {max(token_counts)}\")\n",
-    "print(f\"  Avg: {sum(token_counts) / len(token_counts):.0f}\")\n",
-    "print(f\"  Total: {sum(token_counts):,} tokens\")\n",
     "\n",
     "# Convert to JSON-serializable format\n",
     "chunks_data = [\n",
     "    {\n",
+    "        'id': chunk.id,\n",
     "        'component': chunk.component,\n",
-    "        'section_title': chunk.section_title,\n",
     "        'section_path': chunk.section_path,\n",
     "        'content': chunk.content,\n",
-    "        'demo_files': chunk.demo_files,\n",
-    "        'images': chunk.images,\n",
-    "        'token_count': chunk.token_count\n",
+    "        'demo_code': chunk.demo_code,\n",
+    "        'parent_id': chunk.parent_id,\n",
+    "        'level': chunk.level\n",
     "    }\n",
     "    for chunk in all_chunks\n",
     "]\n",
@@ -183,11 +209,13 @@
     "CHUNKS_DIR.mkdir(parents=True, exist_ok=True)\n",
     "output_file = CHUNKS_DIR / 'chunks_primitive.json'\n",
     "\n",
-    "with open(output_file, 'w') as f:\n",
-    "    json.dump(chunks_data, f, indent=2)\n",
+    "with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(chunks_data, f, indent=2, ensure_ascii=False)\n",
     "\n",
     "file_size_mb = output_file.stat().st_size / (1024 * 1024)\n",
-    "print(f\"\\nFilesize: {file_size_mb:.2f} MB\")\n"
+    "print(f\"Chunks saved to: {output_file}\")\n",
+    "print(f\"File size: {file_size_mb:.2f} MB\")\n",
+    "print(f\"Total chunks: {len(all_chunks):,}\")\n"
    ]
   }
  ],
