--- a/etl/pipeline/notebooks/03_database.ipynb
+++ b/etl/pipeline/notebooks/03_database.ipynb
@@ -7,14 +7,15 @@
    "source": [
     "# Database Pipeline\n",
     "\n",
-    "Load embeddings from JSON and store them in PostgreSQL with pgvector support.\n",
+    "Load optimized chunks with embeddings from JSON and store them in PostgreSQL with pgvector support for semantic search.\n",
     "\n",
     "**Features:**\n",
-    "- Load embeddings from chunks_primitive_embedded.json\n",
-    "- Create tables with pgvector extension\n",
-    "- Insert embeddings with vector indexing (IVF)\n",
-    "- Query similar chunks by vector similarity\n",
-    "- Database statistics and management"
+    "- Load chunks from chunks_embedded.json with parent-child relationships\n",
+    "- Optimized database schema (only essential fields)\n",
+    "- Store demo code as JSONB for easy retrieval\n",
+    "- Create pgvector extension for vector similarity search\n",
+    "- Parent-child indexing for hierarchical document retrieval\n",
+    "- Automatic statistics tracking"
    ]
   },
   {
@@ -40,12 +41,14 @@
    "id": "dd1217d2",
    "metadata": {},
    "source": [
-    "## Implementation"
+    "## Section 1: Database Class\n",
+    "\n",
+    "Defines the `DB` dataclass for PostgreSQL connection management and chunk insertion with pgvector support."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ed773478",
    "metadata": {},
    "outputs": [],
@@ -60,21 +63,79 @@
     "    database: str = \"marigold_rag\"\n",
     "    user: str = \"postgres\"\n",
     "    password: str = \"postgres\"\n",
+    "    table_name: str = \"chunks\"  # Can be \"chunks\" or \"chunks_primitive\"\n",
     "    \n",
     "    def __post_init__(self):\n",
-    "        self.connection = psycopg2.connect(host=self.host, port=self.port, database=self.database, user=self.user, password=self.password)\n",
+    "        self.connection = psycopg2.connect(\n",
+    "            host=self.host, \n",
+    "            port=self.port, \n",
+    "            database=self.database, \n",
+    "            user=self.user, \n",
+    "            password=self.password,\n",
+    "            connect_timeout=5\n",
+    "        )\n",
     "        self.cursor = self.connection.cursor()\n",
     "    \n",
     "    def setup(self):\n",
+    "        \"\"\"Create pgvector extension and chunks table\"\"\"\n",
     "        self.cursor.execute(\"CREATE EXTENSION IF NOT EXISTS vector\")\n",
-    "        self.cursor.execute(\"CREATE TABLE IF NOT EXISTS chunks (id SERIAL PRIMARY KEY, component VARCHAR(255), section_title VARCHAR(500), section_path TEXT, content TEXT, demo_files TEXT, images TEXT, token_count INT, embedding vector(768))\")\n",
-    "        self.cursor.execute(\"CREATE INDEX IF NOT EXISTS chunks_idx ON chunks USING ivfflat (embedding vector_cosine_ops) WITH (lists=100)\")\n",
+    "        \n",
+    "        # Drop table if exists (to recreate with new data)\n",
+    "        self.cursor.execute(f\"DROP TABLE IF EXISTS {self.table_name} CASCADE\")\n",
+    "        \n",
+    "        self.cursor.execute(f\"\"\"\n",
+    "            CREATE TABLE IF NOT EXISTS {self.table_name} (\n",
+    "                id SERIAL PRIMARY KEY,\n",
+    "                component VARCHAR(255) NOT NULL,\n",
+    "                section_path TEXT NOT NULL,\n",
+    "                content TEXT NOT NULL,\n",
+    "                demo_code JSONB,\n",
+    "                parent_id INT,\n",
+    "                level INT DEFAULT 0,\n",
+    "                embedding vector(768) NOT NULL,\n",
+    "                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP\n",
+    "            )\n",
+    "        \"\"\")\n",
+    "        \n",
+    "        # Create indexes for efficient search\n",
+    "        self.cursor.execute(f\"\"\"\n",
+    "            CREATE INDEX IF NOT EXISTS {self.table_name}_embedding_idx \n",
+    "            ON {self.table_name} USING ivfflat (embedding vector_cosine_ops) \n",
+    "            WITH (lists=100)\n",
+    "        \"\"\")\n",
+    "        \n",
+    "        # Index for parent-child relationships\n",
+    "        self.cursor.execute(f\"\"\"\n",
+    "            CREATE INDEX IF NOT EXISTS {self.table_name}_parent_id_idx \n",
+    "            ON {self.table_name}(parent_id)\n",
+    "        \"\"\")\n",
+    "        \n",
+    "        # Index for component search\n",
+    "        self.cursor.execute(f\"\"\"\n",
+    "            CREATE INDEX IF NOT EXISTS {self.table_name}_component_idx \n",
+    "            ON {self.table_name}(component)\n",
+    "        \"\"\")\n",
+    "        \n",
     "        self.connection.commit()\n",
+    "        print(f\"Database table '{self.table_name}' created successfully\")\n",
     "    \n",
     "    def insert(self, **chunk):\n",
-    "        emb = \"[\" + \",\".join(str(x) for x in chunk['embedding']) + \"]\"\n",
-    "        self.cursor.execute(\"INSERT INTO chunks (component, section_title, section_path, content, embedding, demo_files, images, token_count) VALUES (%s,%s,%s,%s,%s,%s,%s,%s)\", \n",
-    "            (chunk.get('component'), chunk.get('section_title'), chunk.get('section_path'), chunk.get('content'), emb, json.dumps(chunk.get('demo_files', [])), json.dumps(chunk.get('images', [])), chunk.get('token_count', 0)))\n",
+    "        \"\"\"Insert chunk with embedding into database\"\"\"\n",
+    "        embedding_str = \"[\" + \",\".join(str(x) for x in chunk['embedding']) + \"]\"\n",
+    "        \n",
+    "        self.cursor.execute(f\"\"\"\n",
+    "            INSERT INTO {self.table_name}\n",
+    "            (component, section_path, content, demo_code, parent_id, level, embedding) \n",
+    "            VALUES (%s, %s, %s, %s, %s, %s, %s)\n",
+    "        \"\"\", (\n",
+    "            chunk.get('component'),\n",
+    "            chunk.get('section_path'),\n",
+    "            chunk.get('content'),\n",
+    "            json.dumps(chunk.get('demo_code', {})),\n",
+    "            chunk.get('parent_id'),\n",
+    "            chunk.get('level', 0),\n",
+    "            embedding_str\n",
+    "        ))\n",
     "        self.connection.commit()\n",
     "    \n",
     "    def close(self):\n",
@@ -87,14 +148,14 @@
    "id": "122a09db",
    "metadata": {},
    "source": [
-    "## Section 2: Load and Store Embeddings\n",
+    "## Section 2: Load & Insert Chunks\n",
     "\n",
-    "Load embeddings from JSON file and insert into database."
+    "Load chunks with embeddings from JSON files and insert them into PostgreSQL. Both semantic and primitive chunks are loaded, then you can execute one of the insert options below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2d57e123",
    "metadata": {},
    "outputs": [
@@ -102,18 +163,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 186 chunks\n"
+      "Semantic chunks loaded: 606\n",
+      "Primitive chunks loaded: 186\n"
      ]
     }
    ],
    "source": [
     "from pathlib import Path\n",
-    "import os, json\n",
+    "import json\n",
     "\n",
-    "chunks_file = Path.cwd().parent.parent.parent / 'etl/data/chunks/chunks_primitive_embedded.json'\n",
-    "with open(chunks_file) as f:\n",
-    "    chunks = json.load(f)\n",
-    "print(f\"Loaded {len(chunks)} chunks\")"
+    "CHUNKS_DIR = Path.cwd().parent.parent.parent / 'etl/data/chunks'\n",
+    "\n",
+    "# Load semantic chunks\n",
+    "semantic_chunks_file = CHUNKS_DIR / 'chunks_embedded.json'\n",
+    "if semantic_chunks_file.exists():\n",
+    "    with open(semantic_chunks_file) as f:\n",
+    "        semantic_chunks = json.load(f)\n",
+    "else:\n",
+    "    semantic_chunks = None\n",
+    "\n",
+    "# Load primitive chunks\n",
+    "primitive_chunks_file = CHUNKS_DIR / 'chunks_primitive_embedded.json'\n",
+    "if primitive_chunks_file.exists():\n",
+    "    with open(primitive_chunks_file) as f:\n",
+    "        primitive_chunks = json.load(f)\n",
+    "else:\n",
+    "    primitive_chunks = None\n",
+    "\n",
+    "print(f\"Semantic chunks loaded: {len(semantic_chunks) if semantic_chunks else 0}\")\n",
+    "print(f\"Primitive chunks loaded: {len(primitive_chunks) if primitive_chunks else 0}\")\n"
    ]
   },
   {
@@ -121,14 +199,15 @@
    "id": "09d4107c",
    "metadata": {},
    "source": [
-    "## Environment Variables\n",
+    "### Insert into Database - Choose One Option\n",
     "\n",
-    "Configure database connection via environment:"
+    "- **OPTION A:** Insert semantic chunks with parent-child relationships\n",
+    "- **OPTION B:** Insert primitive chunks (flat structure)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "96951fe5",
    "metadata": {},
    "outputs": [
@@ -136,30 +215,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done: 186 chunks stored\n"
+      "\n",
+      "Connecting to: localhost:5432/marigold_rag\n",
+      "Table: chunks\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "db = DB(\n",
-    "    host=os.getenv(\"DB_HOST\", \"localhost\"),\n",
-    "    port=int(os.getenv(\"DB_PORT\", 5432)),\n",
-    "    database=os.getenv(\"DB_NAME\", \"marigold_rag\"),\n",
-    "    user=os.getenv(\"DB_USER\", \"postgres\"),\n",
-    "    password=os.getenv(\"DB_PASSWORD\", \"postgres\")\n",
-    ")\n",
+    "\"\"\"Option A: Insert semantic chunks into DB\"\"\"\n",
     "\n",
-    "db.setup()\n",
-    "for i, chunk in enumerate(chunks, 1):\n",
-    "    db.insert(**chunk)\n",
-    "print(f\"Done: {len(chunks)} chunks stored\")\n",
-    "db.close()"
+    "if semantic_chunks is not None:\n",
+    "    db = DB(\n",
+    "        host=\"localhost\",\n",
+    "        port=5432,\n",
+    "        database=\"marigold_rag\",\n",
+    "        user=\"postgres\",\n",
+    "        password=\"postgres\",\n",
+    "        table_name=\"chunks\"\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"\\nConnecting to: {db.host}:{db.port}/{db.database}\")\n",
+    "    print(f\"Table: {db.table_name}\\n\")\n",
+    "    \n",
+    "    try:\n",
+    "        db.setup()\n",
+    "        print(\"\\nInserting semantic chunks into database...\")\n",
+    "        for i, chunk in enumerate(semantic_chunks, 1):\n",
+    "            db.insert(**chunk)\n",
+    "            if i % 100 == 0:\n",
+    "                print(f\" Inserted {i} chunks...\")\n",
+    "        \n",
+    "        print(f\"\\nSuccessfully stored {len(semantic_chunks)} semantic chunks in database\")\n",
+    "        \n",
+    "        db.cursor.execute(f\"SELECT COUNT(*) FROM {db.table_name}\")\n",
+    "        \n",
+    "        db.cursor.execute(f\"SELECT COUNT(DISTINCT component) FROM {db.table_name}\")\n",
+    "        \n",
+    "        db.cursor.execute(f\"SELECT COUNT(*) FROM {db.table_name} WHERE parent_id IS NOT NULL\")\n",
+    "        \n",
+    "        db.cursor.execute(f\"SELECT COUNT(*) FROM {db.table_name} WHERE demo_code IS NOT NULL AND demo_code != '{{}}'::jsonb\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\" Error: {e}\")\n",
+    "        import traceback\n",
+    "        traceback.print_exc()\n",
+    "    finally:\n",
+    "        db.close()\n",
+    "        print(\"\\nDatabase connection closed\")\n",
+    "else:\n",
+    "    print(\"No semantic chunks loaded. Please run the load chunks cell first.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0854844e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'primitive_chunks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[33;03m\"\"\"Option B: Insert primitive chunks into DB\"\"\"\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mprimitive_chunks\u001b[49m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m      4\u001b[39m     db = DB(\n\u001b[32m      5\u001b[39m         host=\u001b[33m\"\u001b[39m\u001b[33mlocalhost\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      6\u001b[39m         port=\u001b[32m5432\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     10\u001b[39m         table_name=\u001b[33m\"\u001b[39m\u001b[33mchunks_primitive\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     11\u001b[39m     )\n\u001b[32m     13\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mConnecting to: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdb.host\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdb.port\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdb.database\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'primitive_chunks' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Option B: Insert primitive chunks into DB\"\"\"\n",
+    "\n",
+    "if primitive_chunks is not None:\n",
+    "    db = DB(\n",
+    "        host=\"localhost\",\n",
+    "        port=5432,\n",
+    "        database=\"marigold_rag\",\n",
+    "        user=\"postgres\",\n",
+    "        password=\"postgres\",\n",
+    "        table_name=\"chunks_primitive\"\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"\\nConnecting to: {db.host}:{db.port}/{db.database}\")\n",
+    "    print(f\"Table: {db.table_name}\\n\")\n",
+    "    \n",
+    "    try:\n",
+    "        db.setup()\n",
+    "\n",
+    "        for i, chunk in enumerate(primitive_chunks, 1):\n",
+    "            db.insert(**chunk)\n",
+    "        \n",
+    "        print(f\"\\nSuccessfully stored {len(primitive_chunks)} primitive chunks in database\")\n",
+    "        \n",
+    "        db.cursor.execute(f\"SELECT COUNT(*) FROM {db.table_name}\")\n",
+    "        \n",
+    "        db.cursor.execute(f\"SELECT COUNT(DISTINCT component) FROM {db.table_name}\")\n",
+    "        \n",
+    "        db.cursor.execute(f\"SELECT COUNT(*) FROM {db.table_name} WHERE demo_code IS NOT NULL AND demo_code != '{{}}'::jsonb\")\n",
+    "\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        import traceback\n",
+    "        traceback.print_exc()\n",
+    "    finally:\n",
+    "        db.close()\n",
+    "        print(f\"\\nDatabase connection closed\")\n",
+    "else:\n",
+    "    print(\"No primitive chunks loaded. Please run the load chunks cell first.\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
